# cs450

./: main.py  pyproject.toml
lab1/: lab1_results.md  pyproject.toml  sampling_test.py  story.py  temperature_test.py
lab2/: chat.py  few_shot_class.py  few_shot_codegen.py  lab2_results.md  pyproject.toml  question.py  zero_shot_class.py  zero_shot_extract.py
lab2/util/: __init__.py  ollama_client.py
lab3/: chain_of_thought2.py  context.py  context2.py  lab3_results.md  misguided.py  prompt_chaining.py  prompt_chaining2.py  pyproject.toml  role_prompting.py  snake1.py  snake_game1.py  snake_game2.py  system_prompting.py
lab4/: compare_rag.py  course_faq.py  embeddings_intro.py  kb.py  lab4_results.md  similarity_test.py  simple_rag.py  test_kb.py
lab5/: classify_fewshot.py  classify_zero.py  describe.py  detect.py  lab5_results.md  question.py  visual_qa.py
lab7/: chroma_intro.py  code_kb.py  code_rag.py  embedding_comparison.py  index_codebase.py  lab7_results.md  names.py  operator_sensitivity.py  sample_codebase.py  structure_test.py  test_queries.py  understand_code.py  unixcoder_intro.py
lab7/util/: __init__.py  ollama_client.py
