[project]
name = "cs450"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "pygame>=2.6.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.workspace]
members = [
    "lab3",
]
